test/libsolidity/syntaxTests/nameAndTypeResolution/237_cyclic_binary_dependency_via_inheritance.sol
contract A is B { }
contract B { function f() public { new C(); } }
contract C { function f() public { new A(); } }
// ----
// TypeError: (14-15): Definition of base has to precede definition of derived contract
